add number,operator and display functionallity

--- a/index.html
+++ b/index.html
@@ -7,28 +7,23 @@
     <body>
         <div id="Container">
             <div class="conitem Display">Display</div>
-            <div class="conitem Display">Display</div>
-            <div class="conitem Display">Display</div>
-            <div class="conitem Display">Display</div>
-            <div class="conitem AC">AC</div>
             <div class="conitem Delete">Delete</div>
             <div class="conitem Clear">Clear</div>
-            <div class="conitem divide">&#247;</div>
-            <div class="conitem seven">7</div>
-            <div class="conitem eight">8</div>
-            <div class="conitem nine">9</div>
-            <div class="conitem x">X</div>
-            <div class="conitem four">4</div>
-            <div class="conitem five">5</div>
-            <div class="conitem six">6</div>
-            <div class="conitem minus">-</div>
-            <div class="conitem one">1</div>
-            <div class="conitem two">2</div>
-            <div class="conitem three">3</div>
-            <div class="conitem addi">+</div>
-            <div class="conitem zeroo">0</div>
+            <div class="conitem divide operator">/</div>
+            <div class="conitem seven number">7</div>
+            <div class="conitem eight number">8</div>
+            <div class="conitem nine number">9</div>
+            <div class="conitem x operator">x</div>
+            <div class="conitem four number">4</div>
+            <div class="conitem five number">5</div>
+            <div class="conitem six number">6</div>
+            <div class="conitem minus operator">-</div>
+            <div class="conitem one number">1</div>
+            <div class="conitem two number">2</div>
+            <div class="conitem three number">3</div>
+            <div class="conitem addi operator">+</div>
+            <div class="conitem zeroo number">0</div>
             <div class="conitem decimall">.</div>
-            <div class="conitem equals">=</div>
             <div class="conitem equals">=</div>
         </div>
      <script src="script.js"></script>   
