--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
         <link rel="stylesheet" href="style.css"></link>
     </head>
     <body>
+        <h1>Why Do Math???</h1>
         <div id="Container">
-            <div class="conitem Display">Display</div>
+            <div class="conitem Display">0</div>
             <div class="conitem Delete">Delete</div>
             <div class="conitem Clear">Clear</div>
             <div class="conitem divide operator">/</div>
@@ -23,7 +24,6 @@
             <div class="conitem three number">3</div>
             <div class="conitem addi operator">+</div>
             <div class="conitem zeroo number">0</div>
-            <div class="conitem decimall">.</div>
             <div class="conitem equals">=</div>
         </div>
      <script src="script.js"></script>   
